--- a/src/GUI/cfg.css
+++ b/src/GUI/cfg.css
@@ -17,3 +17,11 @@
 .advanced {
 	display: none;
 }
+
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
