Wheel: Pretty much done!
The wheel module now also supports:
- Wheel background image and position indicator (arrow pointing to what's selected) - the background image rotates with the wheel

Missing:
- Prize announcement configuration
- Possibly an option to choose whether or not the background image should spin with the wheel

OBS Control:
Currently in the process of writing code to generate entities for OBS control based on variables in the protocol, so as not to need to create them fully each time I add something.

--- a/src/Modules/Wheel/wheel.css
+++ b/src/Modules/Wheel/wheel.css
@@ -19,7 +19,6 @@ canvas { display:block; } /* To remove the scrollbars */
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 1;
 }
 
 /*noinspection CssUnusedSymbol*/
@@ -53,4 +52,12 @@ canvas { display:block; } /* To remove the scrollbars */
 .padder {
     padding: 10px;
     background: black;
+}
+
+.front {
+    z-index: 1;
+}
+
+.back {
+    z-index: -1;
 }
