Stream Raiders: Milestones with enemies
Enemies are displayed now as well.
Fixed the position-fixing, as it did not fix the background images.

--- a/src/Modules/StreamRaiders/streamRaiders.css
+++ b/src/Modules/StreamRaiders/streamRaiders.css
@@ -127,6 +127,8 @@
 
 .milestone-reward {
     z-index: 25;
-    /*width: 120px;*/
-    /*height: 120px;*/
+}
+
+.milestone-enemy {
+    z-index: 25;
 }
