--- a/src/Modules/StreamRaiders/streamRaiders.css
+++ b/src/Modules/StreamRaiders/streamRaiders.css
@@ -35,6 +35,14 @@
     clip-path: inset(0 1920px 0 0);
 }
 
+.city {
+    position: absolute;
+    bottom: 14px;
+    left: 898px;
+    /*transform: translateX(-50%);*/
+    z-index: 10;
+}
+
 .absolute {
     position: absolute;
 }
