--- a/src/Modules/Twister/twister.css
+++ b/src/Modules/Twister/twister.css
@@ -6,12 +6,16 @@ html, body {
     font-family: Arial, sans-serif;
 }
 
+body {
+    background-color: gray;
+}
+
 #frame {
     position: absolute;
-    top: 0;
+    bottom: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 80%;
     border: none;
     overflow: hidden;
 }
@@ -45,19 +49,44 @@ html, body {
     align-items: center;
     margin-top: 20px;
     pointer-events: all;
+    height: 60px;
 }
 
-#level, #timer {
-    width: 50px;
+#timer {
+    width: 200px;
+    display: flex;
     text-align: center;
+    align-items: center;
+    justify-content: center;
     color: var(--text-color, black);
-    outline: var(--text-outline-width, 1px) solid var(--text-outline-color, black);
+    /*outline: var(--text-outline-width, 2px) solid var(--text-outline-color, black);*/
     pointer-events: all;
+    height: 100%;
+
+    font-family: "Orbitron", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    /*font-weight: 900;*/
+    /*font-size: 3em;*/
+}
+
+#level {
+    width: 200px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    pointer-events: all;
+    height: 100%;
+
+    font-family: "Orbitron", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
 
 #progress-container {
-    width: 200px;
-    height: 20px;
+    width: 600px;
+    height: 100%;
     border: 2px solid var(--progress-border-color, black);
     margin: 0 10px;
     position: relative;
@@ -86,4 +115,101 @@ html, body {
     white-space: nowrap;
     pointer-events: all;
     transition: right 0.3s;
+
+    font-family: "Orbitron", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 900;
+    font-style: normal;
+    font-size: 2em;
+}
+
+
+
+/*.ef1 {*/
+/*    font-weight: 900;*/
+/*    font-size: 3em;*/
+/*}*/
+
+.timer-ef1 {
+    font-weight: 400;
+    font-size: 2em;
+}
+
+.timer-ef2 {
+    font-weight: 525;
+    font-size: 2.5em;
+}
+
+.timer-ef3 {
+    font-weight: 650;
+    font-size: 3em;
+}
+
+.timer-ef4 {
+    font-weight: 775;
+    font-size: 3.5em;
+}
+
+.timer-ef5 {
+    font-weight: 900;
+    font-size: 4em;
+}
+
+.ef1 {
+    font-weight: 400;
+    font-size: 2em;
+    color: black;
+}
+
+.ef2 {
+    font-weight: 525;
+    font-size: 2.5em;
+    color: blue;
+}
+
+.ef3 {
+    font-weight: 650;
+    font-size: 3em;
+    color: orange;
+}
+
+.ef4 {
+    font-weight: 775;
+    font-size: 3.5em;
+    color: deeppink;
+}
+
+
+
+@property --k {
+    syntax: "<number>";
+    initial-value: 0;
+    inherits: false;
+}
+
+svg[height="0"] {
+    position: absolute;
+}
+
+.ef5 {
+    /* no pseudo needed */
+    --k: 0;
+    place-self: center;
+    background: linear-gradient(90deg, hsl(calc(var(--k)*1turn), 95%, 65%), hsl(calc(var(--k)*1turn + 90deg), 95%, 65%)) text;
+    color: transparent;
+    font: 900 clamp(.875em, 7.25vw, 4em) "Orbitron", sans-serif;
+    filter: url(#f);
+    text-align: center;
+    text-transform: uppercase;
+    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-color: black;
+    /* needs support for animating custom properties */
+    /* Firefox not quite there yet, but it's coming */
+    animation: k 4s linear infinite;
+}
+
+@keyframes k {
+    to {
+        --k: 1 ;
+    }
 }
